--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,11 @@ plugins {
     id 'java'
     id 'war'
     id "io.freefair.lombok" version "6.5.1"
-    id "io.freefair.aspectj.post-compile-weaving" version "8.4"
+//    id "io.freefair.aspectj.post-compile-weaving" version "8.4"
 
 }
 
-group 'com.example'
+group 'by.example'
 version '1.0-SNAPSHOT'
 
 java {
