--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
 
 }
 
-group 'by.example'
+group 'by.clevertec'
 version '1.0-SNAPSHOT'
 
 java {
@@ -39,6 +39,8 @@ ext {
     jakartaElApiVersion = '5.0.1'
     hibernateValidatorVersion = '8.0.1.Final'
     aspectjVersion = '1.9.20.1'
+    postgresqlVersion = '42.6.0'
+
 }
 
 compileJava {
@@ -57,7 +59,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'com.google.guava:guava:32.1.1-jre'
-
+    implementation "org.postgresql:postgresql:${postgresqlVersion}"
+    implementation group: 'org.hibernate.orm', name: 'hibernate-hikaricp', version: '6.4.1.Final'
+    implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.1.0'
     implementation "org.hibernate.validator:hibernate-validator:${hibernateValidatorVersion}"
     providedCompile "org.mapstruct:mapstruct:${mapstructVersion}"
     providedCompile "org.mapstruct:mapstruct-processor:${mapstructVersion}"
@@ -66,10 +70,10 @@ dependencies {
     implementation "org.yaml:snakeyaml:${snakeyamlVersion}"
     implementation "org.aspectj:aspectjrt:${aspectjVersion}"
     implementation "org.aspectj:aspectjweaver:${aspectjVersion}"
-    implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'com.itextpdf:itextpdf:5.5.13.3'
-    compileOnly('jakarta.servlet:jakarta.servlet-api:5.0.0')
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 
 }
