feat: add flywayMigration

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.flywaydb:flyway-core:9.22.0'
 
     implementation 'com.google.guava:guava:32.1.1-jre'
     implementation "org.postgresql:postgresql:${postgresqlVersion}"
