--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 cache: LRU
 capacity: 25
+
+flyway:
+  jdbcUrl: "jdbc:postgresql://localhost:5432/postgres"
+  username: "postgres"
+  password: "postgres"
+  baselineOnMigrate: true
